<resources>
    <string name="app_name">My Application</string>
    <string name="forget_password">\n</string>
    <string name="register_new_user" />
    <string name="user_id" />
    <string name="password" />
    <string name="common_signin_button_text" />
    <string name="signin" />
    <string name="user_id1">User id:-</string>
    <string name="password1">password:-</string>
    <string name="signin1">signin</string>
    <string name="forget_password1">forget_password</string>
    <string name="register_new_user1">register_new_user</string>
</resources>